--- a/redrock9/tsconfig.json
+++ b/redrock9/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "esnext",
     "module": "esnext",
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "moduleResolution": "node",
     "allowJs": true,
     "noEmit": true,
@@ -14,6 +17,22 @@
     "noUnusedParameters": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "sourceMap": true
-  }
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/pages/*": [
+        "./pages/*"
+      ],
+      "@/styled/*": [
+        "./styled/*"
+      ],
+      "@/components/*": [
+        "./components*"
+      ],
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*"
+  ],
 }
