--- a/redrock9/package.json
+++ b/redrock9/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^4.2.0",
     "@types/next": "^8.0.1",
     "@types/react": "^16.8.6",
     "@types/styled-components": "^4.1.11",
