--- a/redrock9/tsconfig.json
+++ b/redrock9/tsconfig.json
@@ -27,7 +27,10 @@
         "./styled/*"
       ],
       "@/components/*": [
-        "./components*"
+        "./components/*"
+      ],
+      "@/assets/*": [
+        "./assets/*"
       ],
     }
   },
