[提交] 使用静态服务

--- a/redrock9/tsconfig.json
+++ b/redrock9/tsconfig.json
@@ -29,8 +29,8 @@
       "@/components/*": [
         "./components/*"
       ],
-      "@/assets/*": [
-        "./assets/*"
+      "@/static/*": [
+        "./static/*"
       ],
     }
   },
