[提交] 抽象 useState

--- a/redrock9/tsconfig.json
+++ b/redrock9/tsconfig.json
@@ -32,6 +32,9 @@
       "@/static/*": [
         "./static/*"
       ],
+      "@/utils/*": [
+        "./utils/*"
+      ],
     }
   },
   "exclude": [
